<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnLinear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="LinearOnClick"
        android:text="@string/linear_layout" />

    <Button
        android:id="@+id/btnTable"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="TableOnClick"
        android:text="@string/table_layout" />

    <Button
        android:id="@+id/btnRelative"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="RelativeAndAbsoluteOnClick"
        android:text="@string/relative_layout" />

    <Button
        android:id="@+id/btnAbsolute"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="RelativeAndAbsoluteOnClick"
        android:text="@string/absolute_layout" />

    <TextView
        android:id="@+id/tvContextMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perform_long_press_on_me" />

    <TextView
        android:id="@+id/tvIntentResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>